--- a/index.html
+++ b/index.html
@@ -4,7 +4,159 @@
     <meta charset="UTF-8">
     <title>Félicitations Mon Chéri !</title>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;600&family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
-    <!-- ...existing styles... -->
+    <style>
+        body {
+            background: linear-gradient(135deg, #1a1a1a, #2c2c2c);
+            font-family: 'Montserrat', sans-serif;
+            min-height: 100vh;
+            margin: 0;
+            padding: 40px 20px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .container {
+            background: rgba(255, 255, 255, 0.98);
+            border-radius: 20px;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+            max-width: 500px;
+            margin: auto;
+            padding: 40px;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .container::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            height: 5px;
+            background: linear-gradient(90deg, #c5a47e, #dfbd95);
+        }
+
+        h1 {
+            font-family: 'Cormorant Garamond', serif;
+            color: #2c2c2c;
+            font-size: 2.2em;
+            margin-bottom: 25px;
+            letter-spacing: 1px;
+            position: relative;
+            text-align: center;
+        }
+
+        h1::after {
+            content: '';
+            display: block;
+            width: 60px;
+            height: 2px;
+            background: #c5a47e;
+            margin: 15px auto;
+        }
+
+        .photo {
+            margin: 20px auto;
+            position: relative;
+            width: 300px;
+            height: 300px;
+            overflow: hidden;
+            border-radius: 15px;
+            box-shadow: 0 8px 25px rgba(0,0,0,0.1);
+        }
+
+        .photo img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            transition: transform 0.5s ease;
+        }
+
+        .photo:hover img {
+            transform: scale(1.05);
+        }
+
+        p {
+            font-size: 1.1em;
+            color: #444;
+            line-height: 1.8;
+            margin: 25px 0;
+            text-align: center;
+            padding: 0 10px;
+        }
+
+        .gif-btn {
+            text-align: center;
+        }
+
+        .gif-btn button {
+            background: linear-gradient(135deg, #c5a47e, #dfbd95);
+            color: white;
+            border: none;
+            padding: 15px 35px;
+            border-radius: 50px;
+            font-size: 1em;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            font-family: 'Montserrat', sans-serif;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            margin: 20px 0;
+            box-shadow: 0 4px 15px rgba(197, 164, 126, 0.2);
+        }
+
+        .gif-btn button:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 6px 20px rgba(197, 164, 126, 0.3);
+            background: linear-gradient(135deg, #dfbd95, #c5a47e);
+        }
+
+        .surprise-container {
+            display: none;
+            margin: 20px auto;
+            max-width: 300px;
+            animation: fadeIn 1s ease-in;
+        }
+
+        .gif-container img {
+            width: 100%;
+            border-radius: 15px;
+            box-shadow: 0 8px 25px rgba(0,0,0,0.1);
+        }
+
+        .heart {
+            font-size: 2.5em;
+            color: #c5a47e;
+            margin: 20px 0;
+            text-align: center;
+            animation: pulse 1.5s infinite;
+        }
+
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(20px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+
+        @keyframes pulse {
+            0% { transform: scale(1); }
+            50% { transform: scale(1.1); }
+            100% { transform: scale(1); }
+        }
+
+        @media (max-width: 480px) {
+            .container {
+                padding: 25px;
+            }
+            .photo {
+                width: 250px;
+                height: 250px;
+            }
+            h1 {
+                font-size: 1.8em;
+            }
+        }
+    </style>
 </head>
 <body>
     <div class="container">
@@ -16,7 +168,7 @@
             Même si je suis loin aujourd'hui,<br>
             je suis tellement fière de toi et de tout ce que tu as accompli.<br>
             Bravo pour ta cérémonie de remise de diplôme !<br>
-            Je t'aime fort et je pense à toi.
+            Je t'aime fort et je pense à toi. ✨
         </p>
         <div class="gif-btn">
             <button id="gifBtn" onclick="toggleGif()">♡ Voir la surprise ♡</button>
@@ -30,7 +182,6 @@
     </div>
 
     <script>
-        // S'assurer que la surprise est cachée au chargement
         document.addEventListener('DOMContentLoaded', function() {
             document.getElementById('surpriseContainer').style.display = 'none';
         });
@@ -40,4 +191,12 @@
             const btn = document.getElementById('gifBtn');
             if (container.style.display === 'none') {
                 container.style.display = 'block';
-                btn.textContent = '♡
+                btn.textContent = '♡ Cacher la surprise ♡';
+            } else {
+                container.style.display = 'none';
+                btn.textContent = '♡ Voir la surprise ♡';
+            }
+        }
+    </script>
+</body>
+</html>
