--- a/index.html
+++ b/index.html
@@ -165,10 +165,9 @@
             <img src="https://raw.githubusercontent.com/Nadsou23/Diplomedemonbebe/3b0c34c24552c16a057e5ef783a426451b7eeaf2/monbebe.png" alt="Photo de remise de diplôme">
         </div>
         <p>
-            Même si je suis loin aujourd'hui,<br>
-            je suis tellement fière de toi et de tout ce que tu as accompli.<br>
-            Bravo pour ta cérémonie de remise de diplôme !<br>
-            Je t'aime fort et je pense à toi. ✨
+            Qui aurait cru que ce petit bout de chou deviendrait un jour l'homme brillant et déterminé que tu es aujourd'hui ? <br>
+            Chaque moment de ton parcours montre combien tu es talentueux et courageux, et je suis tellement fière de toi. <br>
+            Aujourd'hui, tu célèbres ta réussite ! 
         </p>
         <div class="gif-btn">
             <button id="gifBtn" onclick="toggleGif()">♡ Voir la surprise ♡</button>
@@ -177,7 +176,10 @@
             <div class="gif-container">
                 <img src="https://raw.githubusercontent.com/Nadsou23/Diplomedemonbebe/main/gifdiploma.gif" alt="GIF du diplôme">
             </div>
-            <div class="heart">❤️</div>
+               <div class="heart-container">
+                    <div class="heart">❤️</div>
+                    <span class="heart-text">T'es le meilleur</span>
+              </div>
         </div>
     </div>
 
