--- a/index.html
+++ b/index.html
@@ -6,7 +6,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;600&family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
     <style>
-        /* ... styles précédents ... */
+        body {
+            background: linear-gradient(135deg, #1a1a1a, #2c2c2c);
+            font-family: 'Montserrat', sans-serif;
+            min-height: 100vh;
+            margin: 0;
+            padding: 40px 20px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
 
         .envelope {
             width: 300px;
@@ -18,6 +27,7 @@
             border-radius: 10px;
             box-shadow: 0 10px 30px rgba(0,0,0,0.2);
             transition: transform 0.3s ease;
+            z-index: 1000;
         }
 
         .envelope:hover {
@@ -40,20 +50,173 @@
             display: none;
         }
 
-        .fade-in {
+        .container {
+            background: rgba(255, 255, 255, 0.98);
+            border-radius: 20px;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+            max-width: 500px;
+            margin: auto;
+            padding: 40px;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .container::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            height: 5px;
+            background: linear-gradient(90deg, #c5a47e, #dfbd95);
+        }
+
+        h1 {
+            font-family: 'Cormorant Garamond', serif;
+            color: #2c2c2c;
+            font-size: 2.2em;
+            margin-bottom: 25px;
+            letter-spacing: 1px;
+            position: relative;
+            text-align: center;
+        }
+
+        h1::after {
+            content: '';
+            display: block;
+            width: 60px;
+            height: 2px;
+            background: #c5a47e;
+            margin: 15px auto;
+        }
+
+        .photo {
+            margin: 20px auto;
+            position: relative;
+            width: 300px;
+            height: 300px;
+            overflow: hidden;
+            border-radius: 15px;
+            box-shadow: 0 8px 25px rgba(0,0,0,0.1);
+        }
+
+        .photo img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            transition: transform 0.5s ease;
+        }
+
+        .photo:hover img {
+            transform: scale(1.05);
+        }
+
+        p {
+            font-size: 1.1em;
+            color: #444;
+            line-height: 1.8;
+            margin: 25px 0;
+            text-align: center;
+            padding: 0 10px;
+        }
+
+        .gif-btn {
+            text-align: center;
+        }
+
+        .gif-btn button {
+            background: linear-gradient(135deg, #c5a47e, #dfbd95);
+            color: white;
+            border: none;
+            padding: 15px 35px;
+            border-radius: 50px;
+            font-size: 1em;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            font-family: 'Montserrat', sans-serif;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            margin: 20px 0;
+            box-shadow: 0 4px 15px rgba(197, 164, 126, 0.2);
+        }
+
+        .gif-btn button:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 6px 20px rgba(197, 164, 126, 0.3);
+            background: linear-gradient(135deg, #dfbd95, #c5a47e);
+        }
+
+        .surprise-container {
+            display: none;
+            margin: 20px auto;
+            max-width: 300px;
             animation: fadeIn 1s ease-in;
+        }
+
+        .gif-container img {
+            width: 100%;
+            border-radius: 15px;
+            box-shadow: 0 8px 25px rgba(0,0,0,0.1);
+        }
+
+        .heart-container {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 15px;
+            margin: 20px 0;
+            text-align: center;
+            width: 100%;
+        }
+
+        .heart {
+            font-size: 2.5em;
+            color: #c5a47e;
+            animation: pulse 1.5s infinite;
+        }
+
+        .heart-text {
+            font-family: 'Cormorant Garamond', serif;
+            font-size: 1.5em;
+            color: #c5a47e;
+            font-style: italic;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            font-weight: 600;
+        }
+
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(20px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+
+        @keyframes pulse {
+            0% { transform: scale(1); }
+            50% { transform: scale(1.1); }
+            100% { transform: scale(1); }
+        }
+
+        @media (max-width: 480px) {
+            .container {
+                padding: 25px;
+            }
+            .photo {
+                width: 250px;
+                height: 250px;
+            }
+            h1 {
+                font-size: 1.8em;
+            }
         }
     </style>
 </head>
 <body>
-    <!-- Enveloppe -->
     <div id="envelope" class="envelope" onclick="openEnvelope()">
         <div class="envelope-text">
-            Clique pour ouvrir ♡
+            Clique pour ouvrir ta surprise ♡
         </div>
     </div>
 
-    <!-- Contenu principal -->
     <div id="mainContent">
         <div class="container">
             <h1>Félicitations mon chéri</h1>
@@ -88,7 +251,6 @@
             envelope.style.display = 'none';
             content.style.display = 'block';
             
-            // Confettis à l'ouverture
             confetti({
                 particleCount: 100,
                 spread: 70,
@@ -99,6 +261,7 @@
 
         document.addEventListener('DOMContentLoaded', function() {
             document.getElementById('surpriseContainer').style.display = 'none';
+            document.getElementById('mainContent').style.display = 'none';
         });
         
         function toggleGif() {
