--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
     <style>
         body {
-            background: linear-gradient(135deg, #1a1a1a, #2c2c2c);
+            background: #FFFAF0; /* Blanc crème */
+            /* ou */
+            background: rgb(255, 250, 240); /* Même couleur en RGB */
             font-family: 'Montserrat', sans-serif;
             min-height: 100vh;
             margin: 0;
